@@ -315,7 +315,8 @@ them in a new tab.
 <p>
 The <code>,</code> (comma) and <code>.</code> (dot) keys can be used to jump
 backwards or forward (mnemonic: those keys are usually labeled "&lt;" and
-"&gt;").
+"&gt;"). You can also use the back and forward buttons on your mouse if they are
+available.
 
 <h3 id="location-bar">Location bar</h3>
 <p>
