@@ -19,6 +19,7 @@ dillo-3.3.0 [Unreleased]
  - Add mojeek search engine with shortcut "mj".
  - Hide form elements (like buttons and inputs) with display:none in CSS.
  - Increase margin in location bar to make it easier to select with the mouse.
+ - Navigate back and forward with mouse buttons.
    Patches: Rodrigo Arias Mallo
 +- Middle click on back or forward button opens page in new tab.
    Patches: Alex
